--- a/src/components/calendar/styles.scss
+++ b/src/components/calendar/styles.scss
@@ -5,8 +5,12 @@
   background-color: var(--off-white);
   box-shadow: var(--dp4);
 
-  .calendar button {
+  button {
     outline: none;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   .calendar-month_header {
@@ -20,6 +24,11 @@
       display: flex;
       cursor: pointer;
     }
+
+    .calendar-month_header_title {
+      font-weight: 700;
+      font-size: 16px;
+    }
   }
 
   .calendar-month {
@@ -29,22 +38,13 @@
       justify-content: space-around;
       height: 42px;
       align-items: center;
+
+      .calendar-days_of_week_day {
+        font-weight: 600;
+      }
     }
 
     .calendar-week {
-
-      .maintenance {
-        border: 1px solid blue;
-      }
-      
-      .inspection {
-        border: 1px solid red;
-      }
-      
-      .lease {
-        border: 1px solid green;
-      }
-
       .default-week-day {
         width: 2rem;
         height: 2rem;
@@ -54,12 +54,24 @@
         background-color: transparent;
       }
 
+      .maintenance {
+        border: 1px solid var(--logo-blue);
+      }
+      
+      .inspection {
+        border: 1px solid var(--error-red);
+      }
+      
+      .lease {
+        border: 1px solid var(--logo-green);
+      }
+
       .is-next_month, .is-prev_month {
         opacity: 0.5;
       }
 
       .is-today {
-        background-color: var(--dark-gradient);
+        background-color: var(--dark-blue);
         color: white;
         box-shadow: var(--dp4);
       }
