--- a/src/components/user/styles.css
+++ b/src/components/user/styles.css
@@ -17,10 +17,12 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-weight: 700;
 }
   
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: var(--button-green);
+    font-weight: 700;
 }
   
 form {
