--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -2,6 +2,8 @@
   height: fit-content;
   width: fit-content;
   filter: var(--drop-dp2);
+  position: fixed;
+  top: 0;
 
   .nav-rectangle {
     width: 100vw;
