polished and complete

--- a/src/pages/login_page/styles.scss
+++ b/src/pages/login_page/styles.scss
@@ -1,5 +1,5 @@
-.background-circles {
-  background-color: var(--dark-blue) !important;
+body #root .background-circles.login-circle {
+  background-color: var(--dark-blue);
 }
 
 .login-page {
