--- a/src/global.scss
+++ b/src/global.scss
@@ -43,8 +43,8 @@ weights:
   --dp12: 0 12px 17px 2px rgba(0,0,0,0.14), 0 5px 22px 4px rgba(0,0,0,0.12), 0 7px 8px -4px rgba(0,0,0,0.20);
 
   /* material design drop shadow */
+  --drop-dp1: drop-shadow(0 1px 1px  rgba(0,0,0,0.14)) drop-shadow(0 2px 1px rgba(0,0,0,0.12)) drop-shadow(0 1px 3px rgba(0,0,0,0.20));
   --drop-dp2: drop-shadow(0 2px 2px rgba(0,0,0,0.14)) drop-shadow(0 3px 1px rgba(0,0,0,0.12)) drop-shadow(0 1px 5px rgba(0,0,0,0.20));
-
   --drop-dp4: drop-shadow(0 4px 5px rgba(0,0,0,0.14)) drop-shadow(0 1px 10px rgba(0,0,0,0.12)) drop-shadow(0 2px 4px rgba(0,0,0,0.2));
 }
 
@@ -73,31 +73,33 @@ body {
       position: absolute;
       background-color: white;
       z-index: -100;
-      clip-path: ellipse(70vw 80vh at 0 0);
+      clip-path: ellipse(80vw 85vh at 0 0);
     }
   }
 }
 
 
-
 .formDiv {
   display: flex;
   justify-content: center;
-  padding: 15px;
   height: 100%;
   
   form {
     width: 30rem;
     border-radius: 5px;
-    // background-color: #f2f2f2;
-    padding: 20px;
-    // box-shadow: var(--dp4);
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: fit-content;
+    height: fit-content;
+    margin-top: 75px;
 
     h1 {
-      font-size: 24px;;
+      font-size: 24px;
+      font-weight: 400;
+      width: 80vw;
+      max-width: 500px;
+      text-align: left;
     }
 
     label {
@@ -105,7 +107,6 @@ body {
       max-width: 500px;
       text-align: left;
       margin-top: 20px;
-      color: white;
       font-size: 18px;
     }
 
@@ -146,6 +147,24 @@ body {
 
       &:focus {
         outline: none;
+      }
+    }
+
+    select {
+      @extend input;
+      margin-top: 46px !important;
+      appearance: none;
+      cursor: pointer;
+      background: url('https://api.iconify.design/ci:caret-down.svg') no-repeat center center / contain;
+      background-size: 24px;
+      background-position: right;
+      background-origin: content-box;
+      background-color: white;
+      color: var(--dark-blue);
+      padding-right: 10px;
+
+      option {
+        margin-left: 10px;
       }
     }
   }
