prevented scrolling when nav is dropped down

--- a/src/pages/login_page/styles.scss
+++ b/src/pages/login_page/styles.scss
@@ -14,4 +14,8 @@ body #root .background-circles.login-circle {
 
     transform: translateX(-15px);
   }
+
+  label {
+    color: white !important;
+  }
 }
