--- a/src/components/image/styles.scss
+++ b/src/components/image/styles.scss
@@ -7,6 +7,7 @@
     height: 160px;
     width: 80vw;
     max-width: 500px;
+    margin-top: 30px;
     
     background-color: white;
     border-radius: 15px;
