user card styled and put in container

--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -113,6 +113,7 @@
       color: white;
       font-size:calc(2rem + 4vw);
       text-decoration: none;
+      opacity: 0.9;
 
       &:hover {
         color: var(--logo-blue);
