--- a/src/global.scss
+++ b/src/global.scss
@@ -56,6 +56,7 @@ weights:
 
 body {
   box-sizing: border-box;
+  overflow-x: hidden;
   text-align: center;
   margin: 0;
   min-height: 100vh;
@@ -65,6 +66,8 @@ body {
   #root {
     overflow: hidden;
     min-height: 100vh;
+    padding-top: 100px;
+    box-sizing: border-box;
     
     .background-circles {
       background: center;
@@ -74,6 +77,7 @@ body {
       background-color: white;
       z-index: -100;
       clip-path: ellipse(80vw 85vh at 0 0);
+      margin-top: -100px;
     }
   }
 }
@@ -92,7 +96,6 @@ body {
     align-items: center;
     width: fit-content;
     height: fit-content;
-    margin-top: 100px;
 
     h1 {
       font-size: 24px;
@@ -155,12 +158,11 @@ body {
       margin-top: 46px !important;
       appearance: none;
       cursor: pointer;
-      background: url('https://api.iconify.design/ci:caret-down.svg') no-repeat center center / contain;
+      background: url('https://api.iconify.design/ci:caret-down.svg?color=%232A2B77') no-repeat center center / contain;
       background-size: 24px;
       background-position: right;
       background-origin: content-box;
       background-color: white;
-      color: var(--dark-blue);
       padding-right: 10px;
 
       option {
