--- a/src/global.scss
+++ b/src/global.scss
@@ -66,7 +66,7 @@ body {
   #root {
     overflow: hidden;
     min-height: 100vh;
-    padding-top: 100px;
+    padding: 100px 0;
     box-sizing: border-box;
     
     .background-circles {
