--- a/src/components/card_container/styles.scss
+++ b/src/components/card_container/styles.scss
@@ -1,11 +1,12 @@
 .container {
   display: flex;
+  flex-direction: row !important;
   flex-wrap: wrap;
   position: relative;
   justify-content: space-around;
 
   height: fit-content;
-  width: 80vw;
+  width: 90vw;
   max-width: 900px;
 
   background-color: rgba(255, 255, 255, 0.2);
@@ -15,7 +16,7 @@
 
   margin: auto;
   margin-top: 45px;
-  padding: 65px 10px;
+  padding: 65px 0;
 
   .heading {
     position: absolute;
@@ -47,7 +48,6 @@
       transform: rotate(45deg);
     }
   }
-
 }
 
 .collapse {
