--- a/src/components/house/styles.scss
+++ b/src/components/house/styles.scss
@@ -17,6 +17,7 @@
     h1 {
       font-size: 18px;
       margin: 2px 0 10px 0;
+      overflow-wrap: anywhere;
     }
 
 
@@ -55,6 +56,8 @@
 
       p {
         margin: 2px 0 2px 10px;
+        padding-bottom: 20px;
+        overflow-wrap: anywhere;
       }
 
     }
