update property done

--- a/src/components/house/styles.scss
+++ b/src/components/house/styles.scss
@@ -71,20 +71,17 @@
     padding-right: 5px;
     display: flex;
 
-    .icon {
+    .icon, .delete-icon {
       font-size: 24px;
       cursor: pointer;
       padding: 5px;
     }
 
-    .icon-white {
+    .icon-white, .delete-icon-white {
       @extend .icon;
       background-color: var(--mid-blue);
       clip-path: circle(50% at 50% 50%);
-
     }
 
-
-    
   }
 }
