just have to get the front talking to the back

--- a/src/components/house/styles.scss
+++ b/src/components/house/styles.scss
@@ -11,6 +11,18 @@
 
   text-align: left;
 
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: var(--dp8);
+    transform: scale(1.01);
+  }
+
+  &:active {
+    box-shadow: var(--dp12);
+    transform: scale(1.02);
+  }
+
   
   .card-content {
 
