--- a/src/global.scss
+++ b/src/global.scss
@@ -66,7 +66,7 @@ body {
   #root {
     overflow: hidden;
     min-height: 100vh;
-    padding: 100px 0;
+    padding: 75px 0;
     box-sizing: border-box;
     
     .background-circles {
@@ -76,7 +76,7 @@ body {
       position: absolute;
       background-color: white;
       z-index: -100;
-      clip-path: ellipse(80vw 85vh at 0 0);
+      clip-path: ellipse(80vw 90vh at 0 0);
       margin-top: -100px;
     }
   }
@@ -103,13 +103,14 @@ body {
       width: 90vw;
       max-width: 500px;
       text-align: left;
+      margin-bottom: 15px;
     }
 
     label {
       width: 90vw;
       max-width: 500px;
       text-align: left;
-      margin-top: 20px;
+      margin-top: 15px;
       font-size: 18px;
     }
 
@@ -179,5 +180,12 @@ body {
 @media only screen and (max-width: 700px) {
   body {
     background: repeating-linear-gradient( 130deg, var(--dark-blue) 70vw, var(--gradient-mid-blue) 200vw, var(--dark-blue) 320vw);
+
+    #root {
+      
+      .background-circles {
+        clip-path: ellipse(90vw 85vh at 0 0);
+      }
+    }
   }
 }
