--- a/src/components/card_container/styles.scss
+++ b/src/components/card_container/styles.scss
@@ -18,29 +18,52 @@
   margin-top: 45px;
   padding: 65px 0;
 
-  .heading {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: left;
+    .heading {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 3;
+      font-size: 18px;
+      font-weight: 600;
+      text-align: left;
+  
+      padding: 10px 20px;
+      height: 45px;
+      width: 100%;
+  
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  
+      background-color: white;
+      border-radius: 15px 15px 0px 0px;
+      filter: var(--drop-dp1);
+      box-sizing: border-box;
+  
+      cursor: pointer;
+      
+      .upload-button {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        margin-left: 120px;
+        cursor: pointer;
+        color: var(--mid-blue);
+        border: 1px solid var(--mid-blue);
+        border-radius: 15px;
+        padding: 3px 5px;
 
-    padding: 10px 20px;
-    height: 45px;
-    width: 100%;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    background-color: white;
-    border-radius: 15px 15px 0px 0px;
-    filter: var(--drop-dp1);
-    box-sizing: border-box;
-
-    cursor: pointer;
+        &:hover {
+          color: white;
+          background-color: var(--mid-blue);
+        }
+    
+        .upload-icon {
+          font-size: 24px;
+          margin-right: 5px;
+        }
+      }
+  
 
 
     .dropdown-icon {
