--- a/src/components/user/styles.scss
+++ b/src/components/user/styles.scss
@@ -66,7 +66,7 @@
   position: relative;
 
   min-height: 80px;
-  max-width: 270px;
+  max-width: 250px;
   min-width: 250px;
   padding: 10px;
   margin: 10px;
@@ -84,6 +84,7 @@
       overflow-wrap: anywhere;
       margin: 2px 0 10px 0;
       font-size: 18px;
+      font-weight: 500;
     }
     
     .card-middle {
