--- a/src/components/card_container/styles.scss
+++ b/src/components/card_container/styles.scss
@@ -46,12 +46,14 @@
         position: absolute;
         display: flex;
         align-items: center;
-        margin-left: 120px;
+        margin-left: 110px;
         cursor: pointer;
         color: var(--mid-blue);
         border: 1px solid var(--mid-blue);
         border-radius: 15px;
         padding: 3px 5px;
+        font-size: 14px;
+        transform: scale(0.9);
 
         &:hover {
           color: white;
