--- a/src/pages/property_show_page/styles.scss
+++ b/src/pages/property_show_page/styles.scss
@@ -53,16 +53,17 @@
             }
           }
         }
-        }
+      }
+
     }
-
+    
   }
-
+  
   .container {
     margin-top: 20px;
     max-width: 700px;
     width: 80vw;
-
+    
     small {
       color: var(--error-red);
       font-weight: 700;
@@ -73,6 +74,14 @@
       position: absolute;
       left: 0;
       top: 50px;
+    }
+
+    form {
+      position: absolute;
+      .image-upload-input {
+        opacity: 0;
+        pointer-events: none;
+      }
     }
   }
 
