--- a/src/global.scss
+++ b/src/global.scss
@@ -66,7 +66,7 @@ body {
   #root {
     overflow: hidden;
     min-height: 100vh;
-    padding: 75px 0;
+    padding: 75px 0 0 0;
     box-sizing: border-box;
     
     .background-circles {
@@ -93,7 +93,7 @@ h1 {
 }
 
 .formDiv {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   height: 100%;
   
@@ -138,8 +138,6 @@ h1 {
         font-weight: 700;
 
         &:hover {
-          background-color: var(--button-green);
-          font-weight: 700;
           box-shadow: var(--dp8);
           transform: scale(1.01)
         }
