--- a/src/components/calendar/styles.scss
+++ b/src/components/calendar/styles.scss
@@ -1,5 +1,6 @@
 .calendar {
   width: fit-content;
+  height: fit-content;
   padding: 20px;
   border-radius: 15px;
   background-color: var(--off-white);
@@ -64,6 +65,10 @@
       
       .lease {
         border: 1px solid var(--logo-green);
+      }
+
+      .other {
+        border: 1px solid var(--pending-yellow);
       }
 
       .is-next_month, .is-prev_month {
