--- a/src/components/user/styles.scss
+++ b/src/components/user/styles.scss
@@ -132,3 +132,12 @@
   margin-top: 100px;
 
 }
+
+@media only screen and (max-width: 460px) {
+  .my-account-div {
+    h1 {
+      width: 70vw;
+      transform: translateX(-10vw);
+    }
+  }
+}
