--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -108,10 +108,16 @@
   li {
     list-style: none;
     margin: 20px;
+    cursor: pointer;
+
+    &:last-child {
+      position: absolute;
+      bottom: 0;
+    }
 
     .link {
       color: white;
-      font-size: max(calc(32px + 4vw), 85px);
+      font-size: calc(32px + 4vw);
       text-decoration: none;
       opacity: 0.9;
 
