--- a/src/pages/documents_page/styles.scss
+++ b/src/pages/documents_page/styles.scss
@@ -3,6 +3,16 @@
   flex-direction: column;
   align-items: center;
 
+  .no-documents {
+    width: 80vw;
+    max-width: 900px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: var(--dp4);
+    border: 1px solid rgba(var(--dark-blue-rgb), 0.2)
+  }
+
   h1 {
     width: 80vw;
     max-width: 700px;
