tenants no longer see the add event button on calendar page

--- a/src/pages/documents_page/styles.scss
+++ b/src/pages/documents_page/styles.scss
@@ -10,7 +10,8 @@
     border-radius: 15px;
     background-color: white;
     box-shadow: var(--dp4);
-    border: 1px solid rgba(var(--dark-blue-rgb), 0.2)
+    border: 1px solid rgba(var(--dark-blue-rgb), 0.2);
+    font-weight: 600;
   }
 
   h1 {
