--- a/src/pages/maintenance_display_page/styles.scss
+++ b/src/pages/maintenance_display_page/styles.scss
@@ -1,54 +1,39 @@
-.radio-buttons {
+/*Stuff for the whole page*/
+
+.maintenance-display-page {
   display: flex;
-  width: 10vw;
-  max-width: 500px;
-  flex-direction: row !important;
-  align-items: flex-start;
-}
-input[type=radio] {
-  height: 20px !important;
-  width: 20px !important;
-  box-shadow: none !important;
-  position: fixed;
-  opacity: 0;
-  margin: 0;
-  cursor: pointer;
-
-  &:checked + div {
-    .selected-fill {
-      background-color: var(--mid-blue);
-    }
-
-  }
-}
-
-.custom-radio {
-  height: 21px !important;
-  width: 21px !important;
-  border-radius: 50%;
-  border: 1px solid rgba(var(--dark-blue-rgb), 0.2);
-  box-shadow: var(--dp4);
-  display: flex;
-  align-items: center;
+  flex-direction: column;
+  padding-left: 50px;
+  padding-right: 50px;
   justify-content: center;
-  box-sizing: border-box;
-  margin-right: 10px;
-
-  .selected-fill {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-  }
-}
-
-label {
-  display: flex;
-  width: fit-content !important;
   align-items: center;
-  margin: 0 20px;
-  font-size: 14px !important;
 
-  &:last-child {
-    margin-left: 0;
+  .maintenance-display-title {
+
   }
+
+  .new-request-button {
+    background-color: #00853e;
+    color: white;
+    font-size: 18px;
+    margin: 46px 0;
+    border: none;
+    cursor: pointer;
+    font-weight: 700;
+    box-shadow: var(--dp8);
+    transform: scale(1.01);
+    width: 90vw;
+    height: 40px;
+    max-width: 500px;
+    padding: 0px 20px;
+    display: inline-block;
+    border-radius: 15px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+
 }
